# sora_imagegen_tool

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  prompts.json  pyproject.toml  story_to_video.py
.github/workflows/: auto-bootstrap.yml  regenerate.yml
scripts/: cli.sh  preflight.py  run.sh
src/sora_imagegen_tool/: __init__.py  cli.py  main.py
tests/: conftest.py  test_cli.py  test_sanity.py  test_setup_logging.py
