[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "sora_imagegen_tool"
version = "0.1.0"
description = "A modern Python project."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sora_imagegen_tool = "sora_imagegen_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sora_imagegen_tool"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "colorama>=0.4.6",
    "hatch>=1.14.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]
